Update the showcase samples

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/chai": "^3.4.28",
     "@types/hasher": "0.0.27",
     "@types/crossroads": "0.0.28",
-    "@types/jasmine": "^2.2.29",
+    "@types/jasmine": "2.8.9",
     "@types/jasmine-ajax": "^3.1.27",
     "@types/requirejs": "^2.1.26",
     "@syncfusion/ej2-base": "*",
+    "@syncfusion/ej2-icons": "*",
     "@syncfusion/ej2-navigations": "*",
     "@syncfusion/ej2-lists": "*",
     "@syncfusion/ej2-buttons": "*",
@@ -25,10 +26,10 @@
     "@syncfusion/ej2-popups": "*",
     "gulp": "^3.9.0",
     "gulp-sass": "^3.1.0",
+    "gulp-typescript": "^2.13.0",
     "gulp-print": "^2.0.1",
     "gulp-tslint": "^7.0.1",
     "gulp-sass-lint": "^1.1.1",
-    "gulp-typescript": "^2.13.0",
     "tslint": "4.0.2",
     "run-sequence": "2.2.0",
     "typescript": "2.3.3",
