Feature (EJ2-67870): Updated the Components in the existing TS WebMail ShowCase Application.

--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "hasher": "^1.2.0"
   },
   "devDependencies": {
+    "@syncfusion/ej2-base": "*",
+    "@syncfusion/ej2-buttons": "*",
+    "@syncfusion/ej2-dropdowns": "*",
+    "@syncfusion/ej2-icons": "*",
+    "@syncfusion/ej2-inputs": "*",
+    "@syncfusion/ej2-lists": "*",
+    "@syncfusion/ej2-navigations": "^20.4.38",
+    "@syncfusion/ej2-popups": "*",
+    "@syncfusion/ej2-layouts": "*",
     "@types/chai": "^3.4.28",
-    "@types/hasher": "0.0.27",
     "@types/crossroads": "0.0.28",
+    "@types/hasher": "0.0.27",
     "@types/jasmine": "2.8.9",
     "@types/jasmine-ajax": "^3.1.27",
     "@types/requirejs": "^2.1.26",
-    "@syncfusion/ej2-base": "*",
-    "@syncfusion/ej2-icons": "*",
-    "@syncfusion/ej2-navigations": "*",
-    "@syncfusion/ej2-lists": "*",
-    "@syncfusion/ej2-buttons": "*",
-    "@syncfusion/ej2-dropdowns": "*",
-    "@syncfusion/ej2-inputs": "*",
-    "@syncfusion/ej2-popups": "*",
     "gulp": "^3.9.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^2.13.0",
     "gulp-print": "^2.0.1",
-    "gulp-tslint": "^7.0.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.1.1",
-    "tslint": "4.0.2",
+    "gulp-tslint": "^7.0.1",
+    "gulp-typescript": "^2.13.0",
     "run-sequence": "2.2.0",
+    "tslint": "4.0.2",
     "typescript": "2.3.3",
     "webpack": "2.5.1",
     "webpack-stream": "^3.2.0"
